k8s/dev/internal-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-service
  namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  selector:
    app: internal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: LoadBalancer
